# tiny-actor

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic.rs  basic_example.rs  childpool_and_config.rs  old_sup.rs  supervision.rs
src/: address.rs  channel.rs  child.rs  config.rs  gen.rs  inbox.rs  lib.rs  messaging.rs  shared.rs  spawning.rs
src/_priv/: gen.rs  test_helper.rs
src/actor/: actor_traits.rs  address.rs  any_channel.rs  child.rs  child_pool.rs  halt_notifier.rs  inbox.rs  mod.rs  receiving.rs  sending.rs  shutdown.rs  spawning.rs
src/channel/: any_channel.rs  channel_trait.rs  mod.rs  receiving.rs  sending.rs  task_channel.rs
src/config/: mod.rs
src/errors/: mod.rs
src/messaging/: boxed_message.rs  mod.rs  oneshot.rs  traits.rs
src/parts/: address.rs  child.rs  inbox.rs  mod.rs
tests/: lib.rs
tiny-actor/: Cargo.toml
tiny-actor-codegen/: Cargo.toml
tiny-actor-codegen/src/: lib.rs
tiny-actor/examples/: getting_started.rs  pooled_with_config.rs
tiny-actor/src/: channel.rs  gen.rs  lib.rs  messaging.rs  oneshot.rs  spawning.rs  test.rs
tiny-actor/src/actor/: mod.rs  sending.rs
tiny-actor/src/channel/: channel_traits.rs  mod.rs  receiving.rs  sending.rs
tiny-actor/src/parts/: address.rs  child.rs  inbox.rs
tiny-actor/tests/: lib.rs
