[package]
name = "tiny-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache-padded = "1.2"
event-listener = "2.5.2"
futures = "0.3.0"
tokio = { version = "1.18", features = ["full"] }
once_cell = "1.12"
concurrent-queue = "1.2.2"
thiserror = "1.0"

[dev-dependencies]
easy-parallel = "3.2"
fastrand = "1.7"
