[package]
name = "tiny-actor"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A minimal actor framework for Rust"
repository = "https://github.com/jvdwrf/tiny-actor"
homepage = "https://github.com/jvdwrf/tiny-actor"
keywords = ["actor", "actor-system", "tokio", "pool"]
categories = ["concurrency"]
authors = ["jvdwrf"]

[dependencies]
event-listener = "2.5.2"
futures = "0.3.0"
tokio = { version = "1.18", features = ["full"] }
concurrent-queue = "1.2.2"
thiserror = "1.0"
actor-channel = { path = "../actor-channel" }

